--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     // service workerが有効なら、service-worker.js を登録します
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('./service-worker.js').then(function() { console.log('Service Worker Registered'); });
+   }else{
+   alert("対応していません");
    }
   </script>
   <title>Hello PWA.</title>
